* Add/Modified 'UserEntity','PlayListEntity','UserSettings' builders